structure support for plor_balance_struct_...
struct_checkpoint now runs with two structs
I need to check it further as I build the dashboard

--- a/input/yamls/2025_04_18_physical_model.yaml
+++ b/input/yamls/2025_04_18_physical_model.yaml
@@ -16,11 +16,11 @@ energy_conversion_factors: { 'activity_efficiency': 0.75,  #0.25,  # propulsion 
                              'rest': 0.0005,  # constant for Basal Metabolic Rate (BMR) energy
                              'digest': 0.05,  # [E]/[no units] convert digest factor to digest energy
                              'brain_consumption': 0.005,  # [E]/[no units] convert brain size to brain consumption energy
-                             'height': 25,  # [E]/[h]  # convert height to height energy
-                             'mass': 25  # [E]/[m] = [v^2] = [m^2/sec^4]  convert mass to mass energy
+                             'height_energy': 25,  # [E]/[h]  # convert height to height energy
+                             'mass_energy': 25  # [E]/[m] = [v^2] = [m^2/sec^4]  convert mass to mass energy -> do we use it?
 }
 
 # trait change formulas based on given energy
-trait_energy_params_dict: { 'height': { 'factor': 0.01, 'rate': 0.0005 },  # [factor] = [1], [rate] = [1/sec]
-                            'mass': { 'factor': 0.01, 'rate': 0.0002 }  # [factor] = [1], [rate] = [1/sec]
+trait_energy_params_dict: { 'height_change': { 'factor': 0.01, 'rate': 0.0005 },  # [factor] = [1], [rate] = [1/sec]
+                            'mass_change': { 'factor': 0.01, 'rate': 0.0002 }  # [factor] = [1], [rate] = [1/sec]
 }
